<resources>
    <string name="app_name">Notes</string>
    <string name="un">Username</string>
    <string name="pw">Password</string>
    <string name="pwAgain">Password again</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="reg">Register</string>
    <string name="upcoming">This feature will be implemented at a later date</string>
    <string name="newMsg">Add reminder</string>
    <string name="showAll">Show all</string>
    <string name="emptyField">Fill all data fields</string>
    <string name="passMiss">Passwords do not match</string>
    <string name="badUser">No such username</string>
    <string name="badPass">Password does not match username</string>
    <string name="dbFileName">com.notes.notesdb</string>
    <string name="sharedPreference" translatable="false">com.notes.notespref</string>
    <string name="msg">Message</string>
    <string name="rem">Reminder</string>
    <string name="del">Delete</string>
    <string name="save">Save</string>
    <string name="remind">Remind</string>
    <string name="repeat">Repeat</string>
    <string name="loc">Location</string>
    <string name="locCur">Location current</string>
    <string name="normal_map">nomnom</string>
    <string name="hybrid_map">hypemap</string>
    <string name="satellite_map">SPAAAAACE</string>
    <string name="terrain_map">dirtmap</string>
    <string name="dropped_pin">Dunno lol</string>
</resources>